# pypi_downloader

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md  release-note.md  release-notes.md
.kiro/specs/pypi-downloader-tqdm-progress/: design.md  tasks.md
src/pypi_downloader/: __init__.py  cli.py
